vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subtype__tests__parse_subtype_indication_with_array_constraint_attribute.snap
---
source: vhdl_syntax/src/parser/productions/subtype.rs
expression: "to_test_text(Parser::subtype_indication, \"integer_vector(lib.pkg.bar'range)\")"
---
SubtypeIndication
  Name
    NameDesignatorPrefix
      Identifier 'integer_vector'
    ParenthesizedName
      LeftPar
      AssociationList
        AssociationElement
          ActualPart
            ActualPartExpression
              NameExpression
                Name
                  NameDesignatorPrefix
                    Identifier 'lib'
                  SelectedName
                    Dot
                    Identifier 'pkg'
                  SelectedName
                    Dot
                    Identifier 'bar'
                  AttributeName
                    Tick
                    Keyword(Range)
      RightPar
