vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subtype__tests__parse_subtype_indication_with_array_constraint_range.snap
---
source: vhdl_syntax/src/parser/productions/subtype.rs
expression: "to_test_text(Parser::subtype_indication, \"integer_vector(2-1 downto 0)\")"
---
SubtypeIndication
  Name
    NameDesignatorPrefix
      Identifier 'integer_vector'
    ParenthesizedName
      LeftPar
      AssociationList
        AssociationElement
          ActualPart
            ActualPartExpression
              BinaryExpression
                BinaryExpression
                  LiteralExpression
                    AbstractLiteral '2'
                  Minus
                  LiteralExpression
                    AbstractLiteral '1'
                Keyword(Downto)
                LiteralExpression
                  AbstractLiteral '0'
      RightPar
