vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subtype__tests__parse_subtype_indication_with_array_element_resolution_function.snap
---
source: vhdl_syntax/src/parser/productions/subtype.rs
expression: "to_test_text(Parser::subtype_indication, \"(resolve) integer_vector\")"
---
SubtypeIndication
  ParenthesizedElementResolution
    LeftPar
    ElementResolutionResolutionIndication
      NameResolutionIndication
        Name
          NameDesignatorPrefix
            Identifier 'resolve'
    RightPar
  Name
    NameDesignatorPrefix
      Identifier 'integer_vector'
