vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subtype__tests__parse_subtype_indication_with_nested_array_element_resolution_function.snap
---
source: vhdl_syntax/src/parser/productions/subtype.rs
expression: "to_test_text(Parser::subtype_indication, \"((resolved)) unresolved_slv_array\")"
---
SubtypeIndication
  ParenthesizedElementResolution
    LeftPar
    ElementResolutionResolutionIndication
      ResolutionIndicationElementResolution
        ParenthesizedElementResolution
          LeftPar
          ElementResolutionResolutionIndication
            ResolutionIndicationElementResolution
              NameResolutionIndication
                Name
                  NameDesignatorPrefix
                    Identifier 'resolved'
          RightPar
    RightPar
  Name
    NameDesignatorPrefix
      Identifier 'unresolved_slv_array'
