vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subtype__tests__parse_subtype_indication_with_range.snap
---
source: vhdl_syntax/src/parser/productions/subtype.rs
expression: "to_test_text(Parser::subtype_indication, \"integer range 0 to 2-1\")"
---
SubtypeIndication
  Name
    NameDesignatorPrefix
      Identifier 'integer'
    RangeConstraint
      Keyword(Range)
      BinaryExpression
        LiteralExpression
          AbstractLiteral '0'
        Keyword(To)
        BinaryExpression
          LiteralExpression
            AbstractLiteral '2'
          Minus
          LiteralExpression
            AbstractLiteral '1'
