vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subtype__tests__parse_subtype_indication_with_range_attribute.snap
---
source: vhdl_syntax/src/parser/productions/subtype.rs
expression: "to_test_text(Parser::subtype_indication, \"integer range lib.foo.bar'range\")"
---
SubtypeIndication
  Name
    NameDesignatorPrefix
      Identifier 'integer'
    RangeConstraint
      Keyword(Range)
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'lib'
          SelectedName
            Dot
            Identifier 'foo'
          SelectedName
            Dot
            Identifier 'bar'
          AttributeName
            Tick
            Keyword(Range)
