vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subtype__tests__parse_subtype_indication_with_record_constraint.snap
---
source: vhdl_syntax/src/parser/productions/subtype.rs
expression: "to_test_text(Parser::subtype_indication,\n\"axi_m2s_t(tdata(2-1 downto 0), tuser(3 to 5))\")"
---
SubtypeIndication
  Name
    NameDesignatorPrefix
      Identifier 'axi_m2s_t'
    ParenthesizedName
      LeftPar
      AssociationList
        AssociationElement
          ActualPart
            ActualPartExpression
              NameExpression
                Name
                  NameDesignatorPrefix
                    Identifier 'tdata'
                  ParenthesizedName
                    LeftPar
                    AssociationList
                      AssociationElement
                        ActualPart
                          ActualPartExpression
                            BinaryExpression
                              BinaryExpression
                                LiteralExpression
                                  AbstractLiteral '2'
                                Minus
                                LiteralExpression
                                  AbstractLiteral '1'
                              Keyword(Downto)
                              LiteralExpression
                                AbstractLiteral '0'
                    RightPar
        Comma
        AssociationElement
          ActualPart
            ActualPartExpression
              NameExpression
                Name
                  NameDesignatorPrefix
                    Identifier 'tuser'
                  ParenthesizedName
                    LeftPar
                    AssociationList
                      AssociationElement
                        ActualPart
                          ActualPartExpression
                            BinaryExpression
                              LiteralExpression
                                AbstractLiteral '3'
                              Keyword(To)
                              LiteralExpression
                                AbstractLiteral '5'
                    RightPar
      RightPar
