vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subtype__tests__parse_subtype_indication_with_record_element_resolution_function.snap
---
source: vhdl_syntax/src/parser/productions/subtype.rs
expression: "to_test_text(Parser::subtype_indication, \"(elem resolve) rec_t\")"
---
SubtypeIndication
  ParenthesizedElementResolution
    LeftPar
    ElementResolutionResolutionIndication
      RecordResolutionElementResolution
        RecordResolution
          RecordElementResolution
            Identifier 'elem'
            NameResolutionIndication
              Name
                NameDesignatorPrefix
                  Identifier 'resolve'
    RightPar
  Name
    NameDesignatorPrefix
      Identifier 'rec_t'
